Tue, 6 Oct 2020 16:24:45 -0600 Christian J. Robinson
 * Various small changes and bug fixes

Sun, 4 Oct 2020 12:59:15 -0600 Christian J. Robinson
 * Further prepare for release of Vim 9 by creating Vim 9 versions of
   browser_launcher.vim and MangleImageTag.vim

Fri, 2 Oct 2020 10:11:21 -0600 Christian J. Robinson
 * * Transition to Vim 8.2
* Add Vim9 versions of functions to HTML.vim to hopefully speed up the
  script

Wed, 16 Sep 2020 17:30:06 -0600 Christian J. Robinson
 * Support Microsoft Edge as a browser.

Wed, 16 Sep 2020 14:46:10 -0600 Christian J. Robinson
 * RCS $ tags are useless now that I've switched to Git

Mon, 14 Sep 2020 21:03:10 -0600 Christian J. Robinson
 * Untested code was live.

Sat, 12 Sep 2020 12:23:56 -0600 Christian J. Robinson
 * Don't need RCS stuff in git.

Fri, 11 Sep 2020 21:08:39 -0600 Christian J. Robinson
 * Begin transition to Vim 8

Wed, 11 Mar 2020 11:34:11 -0600 Christian J. Robinson
 * 
Wed, 11 Mar 2020 11:26:49 -0600 Christian J. Robinson
 * Transition ChangeLog from RCS based to Git based

Wed, 11 Mar 2020 10:26:14 -0600 Christian J. Robinson
 * Transition from RCS to Git

2020-02-17  Christian J. Robinson  <heptite at gmail dot com>

 * HTML.txt: Document <button> tag
 * HTML.vim: <button> tag, for frameworks

2020-02-02  Christian J. Robinson  <heptite at gmail dot com>

 * browser_launcher.vim: - Issue a warning if the OS is not recognized
 * HTML.vim: - More HTML 5 tag mappings
 - More housekeeping

 * HTML.txt: - Document new HTML 5 tag mappings
 - More housekeeping

2020-02-01  Christian J. Robinson  <heptite at gmail dot com>

 * HTML.vim: - Housekeeping
 - Add new character enties for super-/sub-script

 * HTML.txt: - General housekeeping
 - Document new character entities

2020-01-31  Christian J. Robinson  <heptite at gmail dot com>

 * HTML.vim: - A few new HTML 5 tag mappings
 - Simplified and unified the browser control mappings and menus

 * HTML.txt: - Document new HTML 5 mappings