@@ -1,179 +1,215 @@
 /* XPM */
-static char * C:\Users\Heptite\lib\vim\HTML\Edge_xpm[] = {
-"16 16 160 2",
+static char * C:\Users\Heptite\Downloads\Edge_xpm[] = {
+"18 18 194 2",
 "  	c None",
-". 	c #37C3DF",
-"+ 	c #2FC3DA",
-"@ 	c #29C2D3",
-"# 	c #2AC2CB",
-"$ 	c #32C4C3",
-"% 	c #34C5BB",
-"& 	c #3AC1EC",
-"* 	c #32C1E8",
-"= 	c #31C2E4",
-"- 	c #2FC2E0",
-"; 	c #2EC2DC",
+". 	c #3CC4DD",
+"+ 	c #31C3D8",
+"@ 	c #2CC3D3",
+"# 	c #2BC3CC",
+"$ 	c #38C5C5",
+"% 	c #31C4BB",
+"& 	c #43C4E9",
+"* 	c #31C2E5",
+"= 	c #30C2E2",
+"- 	c #2FC2DF",
+"; 	c #2EC2DA",
 "> 	c #2CC3D6",
-", 	c #2CC3CF",
-"' 	c #2DC4C2",
-") 	c #35C9AD",
-"! 	c #3FCF9B",
-"~ 	c #30C0EF",
-"{ 	c #34C1EE",
-"] 	c #34C1ED",
-"^ 	c #33C1E9",
-"/ 	c #2FC2DF",
-"( 	c #2DC2DB",
-"_ 	c #2CC3D4",
-": 	c #2EC5C6",
-"< 	c #39CCAD",
-"[ 	c #43D397",
-"} 	c #4AD888",
-"| 	c #3AC1EE",
-"1 	c #34C1EF",
-"2 	c #33BEEB",
-"3 	c #30B6E3",
-"4 	c #2EB6DF",
-"5 	c #31C0E2",
-"6 	c #30C6C5",
-"7 	c #3CCEA9",
-"8 	c #47D693",
-"9 	c #51DC83",
-"0 	c #59E179",
-"a 	c #30BAE7",
-"b 	c #2295CB",
-"c 	c #0F78B9",
-"d 	c #117EBF",
-"e 	c #1280BF",
-"f 	c #147EB8",
-"g 	c #2199C3",
-"h 	c #2BBCD3",
-"i 	c #2BC3D1",
-"j 	c #31C6BF",
-"k 	c #3DCFA6",
-"l 	c #48D78F",
-"m 	c #54DE7F",
-"n 	c #5EE674",
-"o 	c #31B7DA",
-"p 	c #1580C0",
-"q 	c #0C7FC8",
-"r 	c #0F88D3",
-"s 	c #118DD7",
-"t 	c #138FD9",
-"u 	c #148ED3",
-"v 	c #1588C7",
-"w 	c #1A8ABC",
-"x 	c #2BBDC4",
-"y 	c #31C7B6",
-"z 	c #3DCE9F",
-"A 	c #48D68C",
-"B 	c #53DD7D",
-"C 	c #5CE474",
-"D 	c #61E673",
-"E 	c #1E8BC5",
-"F 	c #097FCF",
-"G 	c #0B87D9",
-"H 	c #0D8ADB",
-"I 	c #0F8DDB",
-"J 	c #1190DD",
-"K 	c #1688D0",
-"L 	c #29A5B5",
-"M 	c #30C5AA",
-"N 	c #3ACC97",
-"O 	c #44D488",
-"P 	c #4EDA7C",
-"Q 	c #56DF74",
-"R 	c #56DF6F",
-"S 	c #047ACE",
-"T 	c #0882D8",
-"U 	c #0A85D9",
-"V 	c #0B88DA",
-"W 	c #0D6CB1",
-"X 	c #30C598",
-"Y 	c #37C98C",
-"Z 	c #40D080",
-"` 	c #48D676",
-" .	c #4ED96F",
-"..	c #51DA6C",
-"+.	c #037DD6",
-"@.	c #067FD7",
-"#.	c #0A84D9",
-"$.	c #0B7DCB",
-"%.	c #0B4C8D",
-"&.	c #32C584",
-"*.	c #34C67C",
-"=.	c #3ACC73",
-"-.	c #42D06B",
-";.	c #47D465",
-">.	c #47D562",
-",.	c #117ED6",
-"'.	c #057ED6",
-").	c #0882D7",
-"!.	c #0A67B0",
-"~.	c #0D5298",
-"{.	c #35C672",
-"].	c #34C66D",
-"^.	c #34C666",
-"/.	c #36C85F",
-"(.	c #3CCB5A",
-"_.	c #43CE5B",
-":.	c #117CD5",
-"<.	c #037CD5",
-"[.	c #057ED7",
-"}.	c #0B59A0",
-"|.	c #0D549C",
-"1.	c #13569E",
-"2.	c #3AC858",
-"3.	c #39C854",
-"4.	c #0279D5",
-"5.	c #047ED6",
-"6.	c #0A5EA6",
-"7.	c #0D559D",
-"8.	c #0D559E",
-"9.	c #1A579C",
-"0.	c #167CD4",
-"a.	c #027AD5",
-"b.	c #0769B8",
-"c.	c #0D539A",
-"d.	c #0E549B",
-"e.	c #0D5198",
-"f.	c #165297",
-"g.	c #164C8E",
-"h.	c #1E4B86",
-"i.	c #0076D3",
-"j.	c #0379D1",
-"k.	c #0C549A",
-"l.	c #0E5299",
-"m.	c #0E5197",
-"n.	c #0F4F96",
-"o.	c #104E93",
-"p.	c #114D90",
-"q.	c #0B488B",
-"r.	c #177AD4",
-"s.	c #0472C7",
-"t.	c #0C5399",
-"u.	c #0E5399",
-"v.	c #104D92",
-"w.	c #1F5190",
-"x.	c #117CD6",
-"y.	c #0D78D0",
-"z.	c #0866B6",
-"A.	c #0B59A3",
-"B.	c #145499",
-"C.	c #225595",
-"          . + @ # $ %           ",
-"      & * = - ; > , ' ) !       ",
-"    ~ { ] ^ = / ( _ : < [ }     ",
-"  | 1 2 3 4 5 - ( _ 6 7 8 9 0   ",
-"  a b c d e f g h i j k l m n   ",
-"o p q r s t u v w x y z A B C D ",
-"E F G H I J K     L M N O P Q R ",
-"S T U V H W         X Y Z `  ...",
-"+.@.T #.$.%.        &.*.=.-.;.>.",
-",.'.@.).!.~.      {.].^./.(._.  ",
-":.<.[.@.}.|.1.        2.3.      ",
-"  4.<.5.6.7.8.9.                ",
-"  0.a.<.b.c.8.d.e.f.      g.h.  ",
-"    i.a.j.k.|.d.l.m.n.o.p.q.    ",
-"      r.4.s.t.u.l.m.n.v.w.      ",
-"          x.y.z.A.B.C.          "};
+", 	c #2BC3CF",
+"' 	c #2CC3C4",
+") 	c #31C6B5",
+"! 	c #40CCA5",
+"~ 	c #35C1EE",
+"{ 	c #34C1ED",
+"] 	c #33C1EA",
+"^ 	c #32C2E6",
+"/ 	c #30C2E3",
+"( 	c #2DC2DA",
+"_ 	c #2CC3D5",
+": 	c #2CC3CC",
+"< 	c #34C9B7",
+"[ 	c #3DCFA2",
+"} 	c #45D492",
+"| 	c #4AD886",
+"1 	c #34C1F0",
+"2 	c #34C1EF",
+"3 	c #34C1EE",
+"4 	c #33C1EB",
+"5 	c #32C1E8",
+"6 	c #31C2E4",
+"7 	c #2FC2E0",
+"8 	c #2EC2DB",
+"9 	c #2DC4CD",
+"0 	c #36CAB5",
+"a 	c #40D19F",
+"b 	c #4AD78E",
+"c 	c #51DC81",
+"d 	c #5DE07F",
+"e 	c #33BEEB",
+"f 	c #29A6D6",
+"g 	c #2094C8",
+"h 	c #1B89BE",
+"i 	c #1E91C2",
+"j 	c #25A2CA",
+"k 	c #2CBAD8",
+"l 	c #2EC5CA",
+"m 	c #38CBB2",
+"n 	c #42D29C",
+"o 	c #4DD98A",
+"p 	c #56E07D",
+"q 	c #5DE575",
+"r 	c #2CB2DD",
+"s 	c #137EBB",
+"t 	c #0E7CC0",
+"u 	c #1082C7",
+"v 	c #1286CA",
+"w 	c #1386C8",
+"x 	c #1484C3",
+"y 	c #1680B8",
+"z 	c #23A4C3",
+"A 	c #2BC3D0",
+"B 	c #2EC5C3",
+"C 	c #38CBAC",
+"D 	c #43D398",
+"E 	c #4DD987",
+"F 	c #57E07A",
+"G 	c #60E772",
+"H 	c #65E974",
+"I 	c #2EB0D5",
+"J 	c #0D79BD",
+"K 	c #0C7FCB",
+"L 	c #0E88D6",
+"M 	c #108DDA",
+"N 	c #128FDC",
+"O 	c #1391DC",
+"P 	c #1491D8",
+"Q 	c #148BCD",
+"R 	c #1282BD",
+"S 	c #24A9BC",
+"T 	c #2EC4B9",
+"U 	c #37CAA6",
+"V 	c #41D194",
+"W 	c #4BD885",
+"X 	c #54DE7A",
+"Y 	c #5CE473",
+"Z 	c #63E576",
+"` 	c #1E86C3",
+" .	c #087ECF",
+"..	c #0B86D9",
+"+.	c #0C89DA",
+"@.	c #0E8BDB",
+"#.	c #108EDC",
+"$.	c #118AD5",
+"%.	c #2EC2AC",
+"&.	c #35C99D",
+"*.	c #3FCF8E",
+"=.	c #47D581",
+"-.	c #4FDB78",
+";.	c #55DF73",
+">.	c #56E06F",
+",.	c #0E7ECD",
+"'.	c #0781D7",
+").	c #0984D8",
+"!.	c #0A86D9",
+"~.	c #0E89D8",
+"{.	c #2D5F99",
+"].	c #2EC29B",
+"^.	c #33C791",
+"/.	c #3BCC85",
+"(.	c #43D27B",
+"_.	c #49D674",
+":.	c #4ED96E",
+"<.	c #51DB6C",
+"[.	c #107FD6",
+"}.	c #057FD7",
+"|.	c #0883D8",
+"1.	c #0B6AB0",
+"2.	c #285693",
+"3.	c #31C586",
+"4.	c #32C680",
+"5.	c #37C978",
+"6.	c #3ECE70",
+"7.	c #44D26A",
+"8.	c #47D465",
+"9.	c #50D668",
+"0.	c #2D83D7",
+"a.	c #047ED6",
+"b.	c #0B5090",
+"c.	c #10549A",
+"d.	c #33C672",
+"e.	c #34C66C",
+"f.	c #35C766",
+"g.	c #39CA60",
+"h.	c #3ECD5B",
+"i.	c #46D05D",
+"j.	c #2481D6",
+"k.	c #037CD6",
+"l.	c #0778CB",
+"m.	c #0B4E90",
+"n.	c #0D559E",
+"o.	c #2A5FA2",
+"p.	c #3DC864",
+"q.	c #3DC85E",
+"r.	c #35C754",
+"s.	c #39C754",
+"t.	c #4ACB5F",
+"u.	c #027BD5",
+"v.	c #047DD6",
+"w.	c #0676CA",
+"x.	c #0B4F92",
+"y.	c #0D569F",
+"z.	c #0D559D",
+"A.	c #1A7DD5",
+"B.	c #037CD5",
+"C.	c #047CD4",
+"D.	c #0B4E91",
+"E.	c #0E549B",
+"F.	c #18559B",
+"G.	c #0D7BD5",
+"H.	c #027AD5",
+"I.	c #0960AA",
+"J.	c #0C549A",
+"K.	c #0E5399",
+"L.	c #0F5197",
+"M.	c #175397",
+"N.	c #125094",
+"O.	c #175092",
+"P.	c #154F90",
+"Q.	c #104A8B",
+"R.	c #047AD5",
+"S.	c #0476CC",
+"T.	c #0B5195",
+"U.	c #0D549C",
+"V.	c #0F5095",
+"W.	c #0F4F93",
+"X.	c #104E91",
+"Y.	c #104C8F",
+"Z.	c #157CD5",
+"`.	c #0572C7",
+" +	c #0C5499",
+".+	c #0D5298",
+"++	c #0E5299",
+"@+	c #1E5393",
+"#+	c #2581D6",
+"$+	c #277ED2",
+"%+	c #0969B8",
+"&+	c #0B5EA7",
+"*+	c #195899",
+"=+	c #275B99",
+"            . + @ # $ %             ",
+"        & * = - ; > , ' ) !         ",
+"      ~ { ] ^ / - ( _ : < [ } |     ",
+"    1 2 3 4 5 6 7 8 > 9 0 a b c d   ",
+"  ~ e f g h i j k ( _ l m n o p q   ",
+"  r s t u v w x y z A B C D E F G H ",
+"I J K L M N O P Q R S T U V W X Y Z ",
+"`  ...+.@.#.$.        %.&.*.=.-.;.>.",
+",.'.).!.+.~.{.        ].^./.(._.:.<.",
+"[.}.'.|.!.1.2.        3.4.5.6.7.8.9.",
+"0.a.}.'.|.b.c.        d.e.f.g.h.i.  ",
+"j.k.a.}.l.m.n.o.      p.q.r.s.t.    ",
+"  u.k.v.w.x.y.z.                    ",
+"  A.u.B.C.D.n.z.E.F.                ",
+"    G.H.B.I.J.z.E.K.L.M.N.O.P.Q.    ",
+"      R.H.S.T.U.E.K.L.V.W.X.Y.      ",
+"        Z.H.`. +.+++L.V.W.@+        ",
+"            #+$+%+&+*+=+            "};
